fixed webkit-scrollbar-track

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -21,7 +21,7 @@ a {
 html,
 body {
   /* Firefox scrollbar */
-  scrollbar-width: thin;
+  scrollbar-width: 0.3rem;
   scrollbar-color: rgb(225, 104, 5);
   background: var(--bg);
 
@@ -33,6 +33,12 @@ body {
   &::-webkit-scrollbar-thumb {
     border-radius: 0.3rem;
     background: rgb(225, 104, 5);
+  }
+
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+    border-radius: 0.3rem;
+    background: #f9f9fd;
   }
 }
 
